@@ -6,7 +6,7 @@
     <string id="20002">SageTV Webserver Username</string>
     <string id="20003">SageTV Webserver Password</string>
     <string id="20004">SageTV Recording Folder</string>
-    <string id="20005">SageTV Record Folder UNC path</string>
+    <string id="20005">SageTV Recording Folder Network path</string>
     <string id="20006">SageTV Server MAC Address (for WOL)</string>
     <!-- Settings-->
     
